kubernetes-manifest/frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: santoshpalla27/3-tier:frontend-1
        ports:
        - containerPort: 5173
        resources:
          requests:
            cpu: "200m"      # Requesting 200 milli-CPU
          limits:
            cpu: "500m"      # Limiting the container to 500 milli-CPU
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
  - port: 5173
    targetPort: 5173
  selector:
    app: frontend
