kubernetes-manifest/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    alb.ingress.kubernetes.io/subnets: subnet-095bba76aaa752664,subnet-0c37d2bf31f41405f
    alb.ingress.kubernetes.io/scheme: internet-facing 
    alb.ingress.kubernetes.io/target-type: ip 
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]' # ALB listens on port 80
spec:
  ingressClassName: alb
  rules:
    - host: santosh.website
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 5173
          - path: /record
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5050
